test/spec/br.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/br.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/br.wast:372:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-arg-empty-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br.wast:372:11: type stack at end of function is 0. expected 1
  (module (func $type-arg-empty-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br.wast:379:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-arg-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br.wast:379:11: type stack at end of function is 0. expected 1
  (module (func $type-arg-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br.wast:385:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-arg-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br.wast:385:11: type stack at end of function is 0. expected 1
  (module (func $type-arg-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/br.wast:392:36: label variable out of range (max 1)
  (module (func $unbound-label (br 1)))
                                   ^
assert_invalid error:
  out/third_party/testsuite/br.wast:396:57: label variable out of range (max 3)
  (module (func $unbound-nested-label (block (block (br 5)))))
                                                        ^
assert_invalid error:
  out/third_party/testsuite/br.wast:400:34: label variable out of range (max 1)
  (module (func $large-label (br 0x10000001)))
                                 ^^^^^^^^^^
out/third_party/testsuite/br.wast:372: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000020: end_function_body callback failed
out/third_party/testsuite/br.wast:379: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000021: end_function_body callback failed
out/third_party/testsuite/br.wast:385: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  error: @0x00000022: end_function_body callback failed
out/third_party/testsuite/br.wast:392: assert_invalid passed:
  error: invalid depth: 1 (max 1)
  error: @0x00000019: on_br_expr callback failed
out/third_party/testsuite/br.wast:396: assert_invalid passed:
  error: invalid depth: 5 (max 3)
  error: @0x0000001d: on_br_expr callback failed
out/third_party/testsuite/br.wast:400: assert_invalid passed:
  error: invalid depth: 268435457 (max 1)
  error: @0x0000001d: on_br_expr callback failed
67/67 tests passed.
;;; STDOUT ;;)
